--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,1 @@
-<ul>
-  <li *ngFor="let pokemon of pokemonList">
-    <a routerLink="/pokemon/{{pokemon.id}}">
-      {{pokemon.name}}
-    </a>
-  </li>
-</ul>
+<router-outlet></router-outlet>
